# compilers

./: .gitignore  CLAUDE.md  IMPLEMENTATION_ROADMAP.md  PROJECT_STATUS.md  checkbcp.ps1  checkconn.ps1  claude-project-overview.md  dev.ps1  install.ps1  install.sh  publish.ps1  readme.md  release.ps1  settings.json.example  ubuntu-setup.md  ubuntu-setup.txt  ubuntu_setup.md  windows-setup.md
.claude/: settings.local.json
.claude/agents/: software-developer.md
claude_docs/: todo.md
docs/: architecture.md  commands-reference.md  feature-map.md  options-system.md  troubleshooting.md
install/: bootstrap.ps1  bootstrap.sh  installer.py  installer_linux.py  installer_macos.py  installer_windows.py
src/: CHEAT_SHEET.md  Compilers.sln  Directory.Build.props  README.md  pyproject.toml  settings.json  settings.json.example
src/bcp_data/: Program.cs
src/commands/: bcp_data.py  change_log.py  check_tables.py  compile_msg.py  compile_required_fields.py  eact.py  eloc.py  eopt.py  ereq.py  i_run_upgrade.py  ibs_common.py  iplan.py  iplanext.py  isqlline.py  iwho.py  out.txt  runcreate.py  runsql.py  set_actions.py  set_ide.py  set_messages.py  set_options.py  set_profile.py  set_required_fields.py  set_table_locations.py  settings.json.example  setup_profile.py  tail.py  test.sql  test_connection.py  test_options.py  transfer_data.py  version.py  version_check.py
src/compile_msg/: Program.cs
src/compile_required_fields/: Program.cs
src/eact/: Program.cs
src/eloc/: Program.cs
src/eopt/: Program.cs
src/extract_msg/: Program.cs
src/i_run_upgrade/: Program.cs
src/ibsCompiler/: ChangeLog.cs  CliArgs.cs  CommandVariables.cs  Common.cs  CompileActions.cs  CompileMsg.cs  CompileOptions.cs  CompileRequiredFields.cs  CompileTableLocations.cs  ConfigureCommand.cs  ConsoleMenu.cs  ExtractMsg.cs  IRunUpgrade.cs  InteractiveMenus.cs  Iplan.cs  Iplanext.cs  Isqlline.cs  Iwho.cs  MessageBrowser.cs  MessageFileEditor.cs  Options.cs  ProfileEditor.cs  Runcreate.cs  Runsql.cs  SetProfile.cs  VersionCheck.cs  VersionInfo.cs  ibsCompiler.csproj
src/ibsCompiler/Configuration/: ProfileData.cs  ProfileManager.cs
src/ibsCompiler/Database/: ISqlExecutor.cs  MssqlExecutor.cs  OutputSink.cs  PostgresExecutor.cs  SybaseExecutor.cs
src/ibsCompiler/TransferData/: DatabaseDiscovery.cs  InteractiveCheckbox.cs  ProjectWizard.cs  TransferDataMain.cs  TransferProject.cs  TransferProjectStore.cs  TransferRunner.cs
src/ibs_compilers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/iplan/: Program.cs
src/iplanext/: Program.cs
src/isqlline/: Program.cs
src/iwatch/: Program.cs
src/iwho/: Program.cs
src/runcreate/: Program.cs
src/runsql/: Program.cs
src/set_actions/: Program.cs
src/set_messages/: Program.cs
src/set_options/: Program.cs  set_options.csproj
src/set_profile/: Program.cs
src/set_required_fields/: Program.cs
src/set_table_locations/: Program.cs
src/sql-test/: JunitWriter.cs  Options.cs  Program.cs  Runner.cs  TestResult.cs  sql-test.csproj
src/tests/: __init__.py  conftest.py  tail_test_output.txt  tail_writer.py  test.sql  test_07.95.12345_post.sql  test_convert_non_linked_paths.py  test_find_file.py  test_options_parsing.py  test_profile_management.py  test_runcreate  test_tail.py
src/transfer_data/: Program.cs  transfer_data.csproj
tasks/: todo.md
tests/: headless-suite.ps1
tests/manual/: message-browser.md  profile-editor.md
