# pyproject.toml
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ibs_compilers"
version = "1.0.0"
description = "A collection of command-line tools for managing and deploying IBS databases."
dependencies = [
    "pyodbc"
]

[tool.setuptools]
# Explicitly declare the package
# ibs_common.py is now inside the commands package, not a separate module
packages = ["commands"]

[project.scripts]
isqlline = "commands.isqlline:main"
runsql = "commands.runsql:main"
eact = "commands.eact:main"
eloc = "commands.eloc:main"
eopt = "commands.eopt:main"
bcp_data = "commands.bcp_data:main"
check_tables = "commands.check_tables:main"
compile_msg = "commands.compile_msg:main"
compile_required_fields = "commands.compile_required_fields:main"
i_run_upgrade = "commands.i_run_upgrade:main"
runcreate = "commands.runcreate:main"
tail = "commands.tail:main"
test_connection = "commands.test_connection:main"
test_options = "commands.test_options:main"
