# pyproject.toml
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ibs_compilers"
version = "1.0.0"
description = "A collection of command-line tools for managing and deploying IBS databases."
dependencies = [
    "pyodbc"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools]
# Explicitly declare the package
# ibs_common.py is now inside the commands package, not a separate module
packages = ["commands"]

[project.scripts]
isqlline = "commands.isqlline:main"
runsql = "commands.runsql:main"
set_actions = "commands.set_actions:main"
eact = "commands.set_actions:main"
compile_actions = "commands.set_actions:main"
set_table_locations = "commands.set_table_locations:main"
eloc = "commands.set_table_locations:main"
create_tbl_locations = "commands.set_table_locations:main"
set_options = "commands.set_options:main"
eopt = "commands.set_options:main"
import_options = "commands.set_options:main"
set_messages = "commands.set_messages:main"
compile_msg = "commands.set_messages:main"
install_msg = "commands.set_messages:main"
extract_msg = "commands.set_messages:extract_main"
set_required_fields = "commands.set_required_fields:main"
ereq = "commands.set_required_fields:main"
install_required_fields = "commands.set_required_fields:main"
i_run_upgrade = "commands.i_run_upgrade:main"
runcreate = "commands.runcreate:main"
set_profile = "commands.set_profile:main"
transfer_data = "commands.transfer_data:main"
